--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,14 @@ Thumbs.db
 
 # Folder config file
 Desktop.ini
+
+###############
+#  PhpStorm #
+###############
+/.idea
+
+############
+## Mac
+############
+/__MACOSX
+.DS_Store
